# python-colornames

./: LICENSE  Makefile  README.md  colornames.py  pyproject.toml  test-many-python-versions.zsh  tests.py
.github/workflows/: publish-to-pypi.yaml  test.yaml
tools/: colors.json  prep_tree.py
